objects/Approval_Tree__c/Approval_Tree__c.object-meta.xml
<CustomObject>
    <label>Approval Tree</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Trees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>