objects/Approval_Tree__c/fields/Approval_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Approval_Margin_Pct__c</fullName>
    <label>Approval Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>