objects/Approval_Tree__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales_Order</fullName>
            </value>
            <value>
                <fullName>Sales_Quote</fullName>
            </value>
            <value>
                <fullName>Sales_Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>