objects/Approval_Tree__c/fields/Sales_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sales_Order_Type__c.Blocked__c</field>
            <operation>notEqual</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order_Type__c</referenceTo>
    <relationshipLabel>Approval Trees</relationshipLabel>
    <relationshipName>Approval_Trees</relationshipName>
    <type>Lookup</type>
</CustomField>