objects/Approval_Tree__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Center__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Level__c</columns>
    <columns>Approval_Margin_Pct__c</columns>
    <columns>Approver__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>