objects/Approval_Tree__c/listViews/Copy_of_Lab_Pack_Service_Centers.listView-meta.xml
<ListView>
    <fullName>Copy_of_Lab_Pack_Service_Centers</fullName>
    <columns>NAME</columns>
    <columns>Service_Center__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Level__c</columns>
    <columns>Approval_Margin_Pct__c</columns>
    <columns>Approver__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>07</value>
    </filters>
    <label>Copy of Lab Pack Service Centers</label>
</ListView>