objects/Approval_Tree__c/listViews/Invoices.listView-meta.xml
<ListView>
    <fullName>Invoices</fullName>
    <columns>NAME</columns>
    <columns>Service_Center__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Level__c</columns>
    <columns>Approval_Margin_Pct__c</columns>
    <columns>Approver__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Type__c</field>
        <operation>equals</operation>
        <value>Sales_Quote,Sales_Invoice</value>
    </filters>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>32</value>
    </filters>
    <label>Invoices</label>
</ListView>