objects/Approval_Tree__c/listViews/Metro_Approval_Trees.listView-meta.xml
<ListView>
    <fullName>Metro_Approval_Trees</fullName>
    <columns>NAME</columns>
    <columns>Service_Center__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Level__c</columns>
    <columns>Approval_Margin_Pct__c</columns>
    <columns>Approver__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>01,03,31,32,62,78,73</value>
    </filters>
    <filters>
        <field>Document_Type__c</field>
        <operation>equals</operation>
        <value>Sales_Quote</value>
    </filters>
    <label>Metro Approval Trees</label>
</ListView>