objects/Approval_Tree__c/listViews/SC31_and_SC32.listView-meta.xml
<ListView>
    <fullName>SC31_and_SC32</fullName>
    <columns>NAME</columns>
    <columns>Approver__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Sales_Order_Type__c</columns>
    <columns>Service_Center__c</columns>
    <columns>SC_Name__c</columns>
    <columns>Approval_Margin_Pct__c</columns>
    <columns>LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>31,32</value>
    </filters>
    <filters>
        <field>Document_Type__c</field>
        <operation>equals</operation>
        <value>Sales_Quote,Sales_Invoice</value>
    </filters>
    <label>SC31 and SC32</label>
</ListView>