objects/Approval_Tree__c/listViews/X64_and_65.listView-meta.xml
<ListView>
    <fullName>X64_and_65</fullName>
    <columns>NAME</columns>
    <columns>Service_Center__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Level__c</columns>
    <columns>Approval_Margin_Pct__c</columns>
    <columns>Approver__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Document_Type__c</field>
        <operation>equals</operation>
        <value>Sales_Quote</value>
    </filters>
    <filters>
        <field>Service_Center__c</field>
        <operation>equals</operation>
        <value>65</value>
    </filters>
    <label>64 and 65</label>
</ListView>